# DragonDropTest

./: CMakeLists.txt  README.md
src/: config.h.cmake  dndaction.cpp  dndaction.h  dragsource.cpp  dragsource.h  droparea.cpp  droparea.h  main.cpp  widget.cpp  widget.h  widget.ui
